--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
 <resources>
     <string name="app_name">Lectus</string>
+
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="email">E-mail</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm password</string>
+
     <string name="search">Search</string>
+    <string name="google">Powered by Google</string>
+
     <string name="add_my_book">Add my book</string>
     <string name="title">Title</string>
     <string name="authors">Authors</string>
@@ -15,6 +19,66 @@
     <string name="page_count">Page count</string>
     <string name="photo">Photo</string>
     <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="add_image">Add image</string>
+    <string name="delete_image">Delete image</string>
+    <string name="select_image">Select image</string>
+
+    <string name="details_authors">Authors: </string>
+    <string name="details_publisher">Publisher: </string>
+    <string name="details_description">Description: </string>
+    <string name="details_page_count">Page count: </string>
+    <string name="details_status">Status: </string>
+    <string name="email_display">Email: </string>
+
+    <string name="to_read">To read</string>
+    <string name="reading">Reading</string>
+    <string name="finished_reading">Finished reading</string>
+    <string name="all">All</string>
+
+    <string name="edit">Edit</string>
+    <string name="change_reading_status">Change reading status</string>
+    <string name="change_status">Change status</string>
+    <string name="delete_book">Delete book</string>
+    <string name="select_reading_status">Select reading status</string>
+
+    <string name="change_password">Change Password</string>
+    <string name="change_password_instruction">The email with instructions for password reset will be send to your email address.</string>
+    <string name="confirmation">Confirm</string>
+
+    <string name="change_theme">Choose theme: </string>
+    <string name="dark_theme">Dark theme</string>
+    <string name="light_theme">Light theme</string>
+
+    <string name="yearly_goal">Yearly goal</string>
+    <string name="daily_goal">Daily goal</string>
+    <string name="set_yearly_goal">Set yearly goal</string>
+    <string name="yearly_goal_dialog">How many books do you plan to read this year?</string>
+    <string name="set_goal">Set goal</string>
+    <string name="set_daily_goal">Set daily goal</string>
+    <string name="choose_goal">Choose your goal</string>
+    <string name="pages">Pages</string>
+    <string name="chapters">Chapters</string>
+    <string name="select_number">Select the number of pages/chapters</string>
+    <string name="year">Year: </string>
+    <string name="your_yearly_goal">Your yearly goal is: </string>
+    <string name="congratulations">Congratulations!</string>
+    <string name="completed_yearly">You have reached your yearly goal!</string>
+    <string name="your_daily_goal">Your daily goal is: </string>
+    <string name="instructions">Track your daily goals progress trough the month by marking the days you have achieved it.</string>
+
+    <string name="vaildate_email_e">The format of the email doesn\'t seem right</string>
+    <string name="vaildate_password_e">Password must contain capital and non-capital letters, a number and at least 8 characters</string>
+    <string name="validate_equal_pswrd">Passwords must be equal</string>
+    
+    <string name="settings">Settings</string>
+    <string name="log_out">Log out</string>
+    
+    <string name="book_cover_image">Book cover image</string>
+
+    <string name="show_error">Show error icon</string>
+    <string name="toggle_visibility">Toggle password visibility</string>
+
     <string name="login_route">Login</string>
     <string name="register_route">Register</string>
     <string name="main_screen_route">Main Screen</string>
